not working yet

--- a/dev/Astar.html
+++ b/dev/Astar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src='Lib.js'></script>
 <script src='GridGraph.js'></script>
 <script src='Astar.js'></script>
 
